--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -1,13 +1,32 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Lista de Productos</title>
 </head>
 <body>
-  <p>products</p>
+<h1>Lista de Productos</h1>
+<table border="1">
+  <thead>
+  <tr>
+    <th>ID</th>
+    <th>Nombre</th>
+    <th>Descripción</th>
+    <th>Precio</th>
+    <th>Stock</th>
+  </tr>
+  </thead>
+  <tbody>
+  <!-- Iteramos la lista "productos" -->
+  <tr th:each="producto : ${productos}">
+    <td th:text="${producto.id}"></td>
+    <td th:text="${producto.name}"></td>
+    <td th:text="${producto.description}"></td>
+    <td th:text="${producto.price}"></td>
+    <td th:text="${producto.stock}"></td>
+  </tr>
+  </tbody>
+</table>
+
 </body>
 </html>
