--- a/src/main/resources/templates/orders/detail.html
+++ b/src/main/resources/templates/orders/detail.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:text="'Orden #' + ${order.id}">Detalle de Orden</title>
+    <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/order-styles.css">
 </head>
 <body>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
 <div class="container">
     <h1>
         📦 Detalle de Orden
