Logo Mundo Bici

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -8,7 +8,7 @@
 <nav th:fragment="navbar" class="navbar">
     <div class="navbar-container">
         <div class="navbar-brand">
-            <a href="/" class="brand-link">🛒 Ecommerce</a>
+            <a href="/" class="brand-link">🚲 Mundo Bici</a>
         </div>
 
         <div class="navbar-nav" th:if="${session.userId}">
