--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="login-box">
-    <h1>🛒 Ecommerce Login</h1>
+    <h1>🚲 Mundo Bici</h1>
 
     <!-- Mensajes -->
     <div th:if="${success}" class="alert alert-success">
